<resources>
    <string name="app_name">Zero</string>
    <string name="connecting_restaurants_to_ngos">Connecting Restaurants to NGOs</string>
    <string name="logo">Logo</string>
    <string name="donor">Donor</string>
    <string name="ngo">NGO</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="zip">ZIP Code</string>
    <string name="contact_person">Contact Person</string>
    <string name="cuisine_type">Cuisine Type</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_donor_registration">Donor Registration</string>
    <string name="email">Email</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_donor_home">DonorHome</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="go_to_donor_home">Go to donor home</string>
    <string name="specials_instructions_approximate_expiration_date">Specials Instructions(Approximate Expirations Date)</string>
    <string name="food_description">Food Description</string>
    <string name="photo">Photo</string>
    <string name="clear">CLEAR</string>
    <string name="submit">SUBMIT</string>
    <string name="special_instructions">Special Instructions</string>
    <string name="approximate_expiration_date">Approximate Expiration Date</string>
    <string name="select_date">Select Date...</string>
    <string name="pickup_date">Pickup Date</string>
    <string name="my_account">My Account</string>
    <string name="logout">LOGOUT</string>
    <string name="pickup_time_specify_range">Pickup Time(Specify Range)</string>
    <string name="take_photo">Take Photo</string>
    <string name="title_activity_my_account">My Account</string>
    <string name="textview">TextView</string>
    <string name="textviewbig">TextViewBig</string>
    <string name="view_details">View Details</string>
    <string name="title_activity_view_and_edit_donation">View Details</string>
    <string name="expiration_date_prompt">Choose</string>
    <string-array name="expiration_dates">
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>4 days</item>
        <item>5 days</item>
    </string-array>
</resources>
