<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainDonorHome">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingTop="0dp"
            android:paddingRight="12dp">

            <!-- Email Label -->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/food_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/food_description"
                    android:inputType="" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/photo"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/donateImageView"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0" />

                <Button
                    android:id="@+id/take_photo"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="55dp"
                    android:layout_marginBottom="0dp"
                    android:onClick="takePhoto"
                    android:text="@string/take_photo" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/pickup_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/date"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="#d4d4d4"
                    android:focusableInTouchMode="false"
                    android:hint="@string/select_date"
                    android:padding="5dp"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="14dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="0"
                    android:text="Pickup Time"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/fromTime"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="0"
                    android:background="#d4d4d4"
                    android:focusableInTouchMode="false"
                    android:hint="From..."
                    android:padding="5dp"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/toTime"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="0"
                    android:background="#d4d4d4"
                    android:focusableInTouchMode="false"
                    android:hint="To..."
                    android:padding="5dp"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="0"
                    android:text="@string/approximate_expiration_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/expiration_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="0dp"
                    android:entries="@array/expiration_dates"
                    android:prompt="@string/expiration_date_prompt"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/special_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/special_instructions"
                    android:inputType="textAutoCorrect"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/donate_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:onClick="donateClear"
                    android:text="@string/clear" />

                <Button
                    android:id="@+id/donate_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="donateSubmit"
                    android:text="@string/submit" />

            </LinearLayout>




        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
